[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/enemies/flying/FlyingEnemy.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/Enemy.tscn" type="PackedScene" id=2]

[node name="FlyingEnemy" instance=ExtResource( 2 )]
script = ExtResource( 1 )
DEFEATABLE = true
LEFT_BOUND = 50
RIGHT_BOUND = 50
pause_time = 1

[node name="PatrolTimer" type="Timer" parent="." index="5"]
wait_time = 3.0
one_shot = true

[node name="WallCast" type="RayCast2D" parent="." index="6"]
enabled = true
cast_to = Vector2( 40, 0 )
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]

[editable path="Hurtbox"]
